--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "### Ernest Salim - es4281@columbia.edu\n",
     "\n",
-    "This notebook serves as a PDF representation for the take-home assessment submission."
+    "This notebook serves as a PDF representation for the take-home assessment submission.\n",
+    "\n",
+    "Source code can be accessed through this [link](https://github.com/Nesto17/notion-take-home)."
    ]
   },
   {
